[gd_scene load_steps=54 format=3 uid="uid://dn6elo7vpye1c"]

[ext_resource type="Script" path="res://ships/basic_ship/basic_ship.gd" id="1_233k0"]
[ext_resource type="Gradient" uid="uid://dxbpa3wy4kkya" path="res://art/player_boost_gradient.tres" id="2_jep4j"]
[ext_resource type="Script" path="res://ships/basic_ship/boost.gd" id="2_va7p6"]
[ext_resource type="Script" path="res://ships/basic_ship/fire.gd" id="3_eog6w"]
[ext_resource type="PackedScene" uid="uid://do4o0k42eixaw" path="res://ships/ship_state_machine/ship_state_machine.tscn" id="3_q4maa"]
[ext_resource type="Script" path="res://ships/generic_states/boid_state.gd" id="4_0rp6a"]
[ext_resource type="Script" path="res://ships/basic_ship/enemy_fire.gd" id="4_4jsor"]
[ext_resource type="Script" path="res://ships/basic_ship/enemy_boost.gd" id="4_th7u7"]
[ext_resource type="Script" path="res://ships/generic_states/circle.gd" id="5_fvppf"]
[ext_resource type="Script" path="res://ships/generic_states/follow_mouse.gd" id="7_3msbn"]
[ext_resource type="PackedScene" uid="uid://b16d8fcohve56" path="res://ships/ship_area/ship_area.tscn" id="8_05l4c"]
[ext_resource type="Script" path="res://ships/generic_states/defend.gd" id="8_nfa8o"]
[ext_resource type="Script" path="res://ships/basic_ship/smg.gd" id="9_fj7sh"]
[ext_resource type="Script" path="res://ships/generic_states/shoot.gd" id="9_w5jbb"]
[ext_resource type="PackedScene" uid="uid://jnajxsxwxoer" path="res://ships/basic_ship/projectile/smg_bullet.tscn" id="10_0nv4q"]
[ext_resource type="PackedScene" uid="uid://dncysgcenw0qx" path="res://death_explosion.tscn" id="12_m6u1j"]
[ext_resource type="PackedScene" uid="uid://bw1jqqaydcxqo" path="res://ships/weight_system/weight_debugger/ship_weight_debugger.tscn" id="17_jn7rj"]

[sub_resource type="Curve" id="Curve_xjb1h"]
_data = [Vector2(0, 0.615385), 0.0, 0.0, 0, 0, Vector2(0.846667, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gkwdo"]
curve = SubResource("Curve_xjb1h")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isw5s"]
resource_local_to_scene = true
gradient = ExtResource("2_jep4j")

[sub_resource type="Curve" id="Curve_7blia"]
max_value = 12.0
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0papf"]
curve = SubResource("Curve_7blia")

[sub_resource type="Curve" id="Curve_i7yo7"]
_data = [Vector2(0, 0.769231), 0.0, 0.0, 0, 0, Vector2(1, 0.472527), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jvgtt"]
curve = SubResource("Curve_i7yo7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wjaof"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c4a68"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7728x"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_akv2g"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hth4b"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 145.16
initial_velocity_max = 145.16
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kotcs"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_phvpi"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wemo8"]
gradient = SubResource("Gradient_phvpi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_645os"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_wemo8")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c75ca"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_5uipf"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8v2pm"]
gradient = SubResource("Gradient_5uipf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_80dav"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_8v2pm")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u3dir"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_wujah"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ghfwd"]
gradient = SubResource("Gradient_wujah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rhjb0"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 145.16
initial_velocity_max = 145.16
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_ghfwd")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v8vlh"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_alpew"]
load_path = "res://.godot/imported/Ships.png-a79435ddc1b1eeee2f87818eaaed4e55.ctex"

[sub_resource type="Shader" id="Shader_yo7lj"]
code = "// Flashing Shader
// Overlays/Mixes between an animated color A and color B (alpha of each controls mix amount)
shader_type canvas_item;

// Color A: grey by default
uniform vec4 color_a:source_color = vec4(0.7, 0.7, 0.7, 1.0);

// Color B: White by default
uniform vec4 color_b:source_color = vec4(1.0, 1.0, 1.0, 1.0);

// if enabled, color_a and color_b alpha will affect transparency
uniform bool colors_affect_alpha = false;

// Whether to enable the animation or simply mix in color_a only
uniform float flash_amount:hint_range(0.0, 1.0, 0.1) = 1.0;

// if flash_amount is true, flash_speed controls the speed of the animation between color_a and color_b
uniform float flash_speed = 1.0;

// transparency, like modulate
uniform float transparency:hint_range(0.0, 1.0, 0.01) = 1.0;

// Intensity of the shader
uniform float intensity:hint_range(0.0, 1.0, 0.1) = 1.0;


float anim() {
	return (sin(TIME * flash_speed) + 1.0) / 2.0;
}

// returns a mix between color_a and color_b, based on TIME
// see the anim() function
vec4 get_shader_color() {
	if (flash_amount > 0.0) {
		float f = anim();
		return mix(color_a, color_b, f * flash_amount);
	}else {
		return color_a;
	}
}

void fragment() {
	// get input color and alpha from the texture
	vec4 in_color = texture(TEXTURE, UV);
	float in_alpha = in_color.a;

	// get the shader color (some mix between color_a and color_b)
	vec4 shader_rgba = get_shader_color();
	vec3 shader_color = shader_rgba.rgb;
	float shader_alpha = shader_rgba.a;

	// rgb color mixes between in_color and shader_color * by shader_alpha
	// this way, color_a can have a different \"intensity\" than color_b
	//
	// wrap in vec4 and plug in the in_alpha since we don't generally want to retain that from the texture
	vec4 out_color = vec4(mix(in_color.rgb, shader_color, shader_alpha), in_alpha);

	// if affect_alpha is true, we will modulate transparency by our color_a/b
	if (colors_affect_alpha) {
		out_color.a = in_alpha * shader_alpha;
	}

	out_color.a *= transparency;

	// finally, use mix to control intensity of the entire effect
	COLOR = mix(in_color, out_color, intensity);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67vke"]
resource_local_to_scene = true
shader = SubResource("Shader_yo7lj")
shader_parameter/color_a = Color(0.4, 0.0588235, 0.192157, 1)
shader_parameter/color_b = Color(0.4, 0.0588235, 0.192157, 1)
shader_parameter/colors_affect_alpha = true
shader_parameter/flash_amount = 0.0
shader_parameter/flash_speed = 1.0
shader_parameter/transparency = 0.0
shader_parameter/intensity = 1.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_snwgn"]
load_path = "res://.godot/imported/Ships.png-a79435ddc1b1eeee2f87818eaaed4e55.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_csi4d"]
resource_local_to_scene = true
shader = SubResource("Shader_yo7lj")
shader_parameter/color_a = Color(1, 1, 1, 1)
shader_parameter/color_b = Color(1, 1, 1, 0.376471)
shader_parameter/colors_affect_alpha = true
shader_parameter/flash_amount = 1.0
shader_parameter/flash_speed = 4.0
shader_parameter/transparency = 0.2
shader_parameter/intensity = 1.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b12hb"]
load_path = "res://.godot/imported/Ships.png-a79435ddc1b1eeee2f87818eaaed4e55.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1b6b"]
size = Vector2(10.0042, 57.9952)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35usg"]
size = Vector2(44.0039, 21.0041)

[sub_resource type="Animation" id="Animation_esfsr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ship_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ship_sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ship_sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.65, 1.65)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ship_sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ship_sprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("damage_shader:material:shader_parameter/transparency")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("damage_shader:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("damage_shader:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("damage_shader:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.65, 1.65)]
}

[sub_resource type="Animation" id="Animation_eh7qf"]
resource_name = "dmg"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ship_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ship_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.65, 1.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ship_sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 0), Vector2(11, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ship_sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("damage_shader:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("damage_shader:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("damage_shader:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.65, 1.65)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("damage_shader:material:shader_parameter/transparency")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwwpy"]
_data = {
"RESET": SubResource("Animation_esfsr"),
"dmg": SubResource("Animation_eh7qf")
}

[node name="BasicShip" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_233k0")
explosion_scene = ExtResource("12_m6u1j")

[node name="boosts" type="Node2D" parent="."]

[node name="player_fire1" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-10, -17)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("3_eog6w")

[node name="player_fire2" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-10, 17)
amount = 50
process_material = SubResource("ParticleProcessMaterial_7728x")
texture = SubResource("CompressedTexture2D_akv2g")
lifetime = 0.5
local_coords = true
script = ExtResource("3_eog6w")

[node name="player_boost" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-10, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_hth4b")
texture = SubResource("CompressedTexture2D_kotcs")
lifetime = 0.5
local_coords = true
script = ExtResource("2_va7p6")

[node name="enemy_fire1" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-13, -19)
amount = 50
process_material = SubResource("ParticleProcessMaterial_645os")
texture = SubResource("CompressedTexture2D_c75ca")
lifetime = 0.5
local_coords = true
script = ExtResource("4_4jsor")

[node name="enemy_fire2" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-13, 19)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("4_4jsor")

[node name="enemy_boost" type="GPUParticles2D" parent="boosts"]
visible = false
position = Vector2(-17, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_rhjb0")
texture = SubResource("CompressedTexture2D_v8vlh")
lifetime = 0.5
local_coords = true
script = ExtResource("4_th7u7")

[node name="ship_sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(11, 0)
scale = Vector2(1.65, 1.65)
texture = SubResource("CompressedTexture2D_alpew")
hframes = 8
vframes = 2

[node name="damage_shader" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_67vke")
position = Vector2(11, 0)
scale = Vector2(1.65, 1.65)
texture = SubResource("CompressedTexture2D_snwgn")
hframes = 8
vframes = 2

[node name="selected_shader" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_csi4d")
position = Vector2(11, 0)
scale = Vector2(1.65, 1.65)
texture = SubResource("CompressedTexture2D_b12hb")
hframes = 8
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(11.9936, -0.00217438)
rotation = 1.57509
shape = SubResource("RectangleShape2D_h1b6b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.54508, -0.000193357)
rotation = 1.57509
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_35usg")

[node name="ShipStateMachine" parent="." instance=ExtResource("3_q4maa")]

[node name="BoidState" type="Node" parent="ShipStateMachine"]
script = ExtResource("4_0rp6a")

[node name="FollowMouse" type="Node" parent="ShipStateMachine"]
script = ExtResource("7_3msbn")
id = "follow_mouse"

[node name="Circle" type="Node" parent="ShipStateMachine"]
script = ExtResource("5_fvppf")
id = "circle"

[node name="Defend" type="Node" parent="ShipStateMachine"]
script = ExtResource("8_nfa8o")
id = "defend"
first_active_state = true

[node name="Shoot" type="Node" parent="ShipStateMachine"]
script = ExtResource("9_w5jbb")
id = "shoot"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="ShipArea" parent="." instance=ExtResource("8_05l4c")]

[node name="gun1" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(14, -19)
script = ExtResource("9_fj7sh")
projectile_scene = ExtResource("10_0nv4q")
fire_position_node = NodePath(".")

[node name="gun2" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(14, 19)
script = ExtResource("9_fj7sh")
projectile_scene = ExtResource("10_0nv4q")
fire_position_node = NodePath(".")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwwpy")
}

[node name="death" parent="." instance=ExtResource("12_m6u1j")]

[node name="ShipWeightDebugger" parent="." instance=ExtResource("17_jn7rj")]
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
